Fix product details alignment

--- a/src/index.css
+++ b/src/index.css
@@ -212,3 +212,7 @@ button {
 .AVAILABLE {
   background-color: #45a049;
 }
+
+#productDetails > span {
+  text-align: start;
+}
